python_scripts/logs/CNN_Randomforest_test_1.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/descriptor_models.py", line 251
    def __innit__(self, input.dim): 
                             ^
SyntaxError: invalid syntax
